--- a/templates/home.html
+++ b/templates/home.html
@@ -14,21 +14,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="{% static 'img/1.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'img/2.jpg' %}" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="{% static 'img/2.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'img/slide3.jpg' %}" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="{% static 'img/3.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'img/slide4.jpg' %}" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -57,38 +57,34 @@
       <div class="cen">
         <div class="service">
           <img src="{% static 'img/quality.png' %}">
-          <h2>Best Quality</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Quibusdam iure eos id repudiandae dolorem nisi quo accusamus
-              quis asperiores et iusto enim qua
-            m cumque tempora neque labore, tenetur explicabo porro!</p>
+            <h2>Best Quality</h2>
+          <p>We believe that attention to detail and excellent
+             customer service are key to a successful business,
+              and we strive to excel in both areas.</p>
         </div>
   
         <div class="service">
-          <img src="{% static 'img/expert.png' %}">
-          <h2>Expert Adivce</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Quibusdam iure eos id repudiandae dolorem nisi quo accusamus
-              quis asperiores et iusto enim qua
-            m cumque tempora neque labore, tenetur explicabo porro!</p>
+          <img src="{% static 'img/expertise.png' %}">
+            <h2>Expert Adivce</h2>
+          <p>We pride ourselves on being a valuable resource for our clients,
+             offering expert advice and guidance whenever it's needed."</p>
         </div>
   
         <div class="service">
-          <img src="{% static 'img/expert.png' %}"> 
-                   <h2>Labour Expertise</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Quibusdam iure eos id repudiandae dolorem nisi quo accusamus
-              quis asperiores et iusto enim qua
-            m cumque tempora neque labore, tenetur explicabo porro!</p>
-        </div>
+          <img src="{% static 'img/expert advice.png' %}"> 
+            <h2>Labour Expertise</h2>
+          <p>F 
+            Our team has a proven track record of success in [industry/field],
+             and we are always looking for ways to improve and expand our expertise.
+            </p>
+x``        </div>
   
         <div class="service">
           <img src="{% static 'img/time service.png' %}">
-          <h2>On time Service</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Quibusdam iure eos id repudiandae dolorem nisi quo accusamus
-              quis asperiores et iusto enim qua
-            m cumque tempora neque labore, tenetur explicabo porro!</p>
+            <h2>On time Service</h2>
+          <p>We understand the importance of sticking to a schedule, 
+            and we work hard to make sure that our services are delivered 
+            on time, every time</p>
         </div>
   
   
@@ -166,7 +162,93 @@
 
 
  <!-- reviews                                                                                                                                       -->
+ <section id="contact" class="contact">
 
+  <div class="container" data-aos="fade-up">
+
+    <div class="aboutfile">
+      <header class="section-header">
+        <h2>Contact</h2>
+        <p>Contact Us</p>
+      </header>
+    </div>
+
+    <div class="row gy-4">
+
+      <div class="col-lg-6">
+
+        <div class="row gy-4">
+          <div class="col-md-6">
+            <div class="info-box">
+              <img src="{% static 'img/adress.png'%}" width="100px">
+              <h3>Address</h3>
+              <p>A108 Adam Street,<br>New York, NY 535022</p>
+            </div>
+            
+          </div>
+          <div class="col-md-6">
+            <div class="info-box">
+              <img src="{% static 'img/call us.png'%}" width="100px">                
+                <h3>Call Us</h3>
+              <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="info-box">
+              <img src="{% static 'img/email.png'%}" width="100px">
+                    <h3>Email Us</h3>
+              <p>info@example.com<br>contact@example.com</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="info-box">
+              <img src="{% static 'img/open hours.png'%}" width="100px">
+              <h3>Open Hours</h3>
+              <p>Monday - Friday<br>9:00AM - 05:00PM</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-lg-6">
+        <form action="#" method="post" class="php-email-form">
+          <div class="row gy-4">
+
+            <div class="col-md-6">
+              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+            </div>
+
+            <div class="col-md-6 ">
+              <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+            </div>
+
+            <div class="col-md-12">
+              <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+            </div>
+
+            <div class="col-md-12">
+              <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+            </div>
+
+            <div class="col-md-12 text-center">
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your message has been sent. Thank you!</div>
+
+              <button type="submit">Send Message</button>
+            </div>
+
+          </div>
+        </form>
+
+      </div>
+
+    </div>
+
+  </div>
+
+</section>
 <section>
   <div class="rev-section">
 
@@ -177,11 +259,11 @@
     
     <div class="review">
        <div class="head-review">
-        <img  class="user" src="{% static 'img/pic.jpeg' %}" width="250px">
+        <img  class="user" src="{% static 'img/men.jpg'%}" width="250px">
       </div>
        <div class="body-review">
-          <div class="name-review">Rajnik radadiya</div>
-          <div class="place-review">Surat</div>
+          <div class="name-review">robot suna</div>
+          <div class="place-review">u.s.a</div>
           <div class="rating">
              <i class="fas fa-star"></i>
              <i class="fas fa-star"></i>
@@ -194,11 +276,11 @@
     </div>
     <div class="review">
        <div class="head-review">
-          <img  class="user" src="{% static 'img/fenil pic_11zon.jpeg' %}" width="250px">
+          <img  class="user" src="{% static 'img/women.jpg'%}" width="250px">
        </div>
        <div class="body-review">
-          <div class="name-review">Ravi Mangukiya</div>
-          <div class="place-review">surat</div>
+          <div class="name-review">henscyyy</div>
+          <div class="place-review">uk</div>
           <div class="rating">
              <i class="fas fa-star"></i>
              <i class="fas fa-star"></i>
@@ -211,10 +293,10 @@
     </div>
     <div class="review">
        <div class="head-review">
-          <img class="user" src="{% static 'img/fenil pic_11zon.jpeg' %}" width="250px">
+          <img class="user" src="{% static 'img/men 2.jpg'%}" width="250px">
        </div>
        <div class="body-review">
-          <div class="name-review">fenil vekariya</div>
+          <div class="name-review">jhonsa</div>
           <div class="place-review">surat</div>
           <div class="rating">
              <i class="fas fa-star"></i>
@@ -231,6 +313,5 @@
     
     </div>
 </section>
-
 {% endblock %}
 
