--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -2,28 +2,44 @@
 
 <body>
 
-    <!-- header           👎👎👎👎 -->
-   <section>
-    <div class="nav-me">
-      <!-- <input type="checkbox" id="check1">
-      <label for="check" class="checkbtn">
-          <i class="fas fa-bars"></i>
-      </label> -->
-      <a href="{% url 'home' %}"><img  class="logo" src="{% static 'img/Asset 2.png'%}"></a>
-      <ul class="navmenu">
-          <li><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">services</a></li>
-          <li><a href="#">order</a></li>
-          <li><a href="#">contact</a></li>
-          <li><button onclick="login();" class="btn login">Login</button></li>
-          
 
-      </ul>
 
-     
+       
+        <nav class="navbar navbar-expand-lg navbar-light bg-light nav-wf">
+            <div class="container-fluid nav-wf">
+              
+                <a href="{% url 'home' %}"><img src="{%static 'img/Asset 2.png'%}" alt="Logo" class="navbar-brand logo-wf"></a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-between nav-item-wf" id="navbarCollapse">
+                    <div class="navbar-nav">
+                        <a href="{% url 'home' %}" class="nav-item nav-link">Home</a>
+                        <a href="#" class="nav-item nav-link">About us</a>
+                        <a href="#" class="nav-item nav-link">Orders</a>
+                        <a href="#" class="nav-item nav-link">Contact us</a>
+                        <a href="#" class="nav-item nav-link">Feedback</a>
+                        
+                    </div>
+                    <form class="d-flex">
+                        <div class="input-group">
+                            <input type="text" class="form-control searchbar-wf" placeholder="Search">
+                            <button type="button" class="btn btn-secondary icon-wf"><i class="fa fa-search"></i></button>
+                        </div>
+                    </form>
+                    <div class="navbar-nav">
+                    {% if  user.is_authenticated%}
+                        <a href="{% url 'myAccount' %}" style="color: black; font-weight: lighter; text-decoration: none; margin:auto; margin-right:5px;">My Account</a>
+                        <a href="{% url 'logout' %}" class="nav-item nav-link btn  login-wf" style="color: black; font-weight: lighter;">Logout</a>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="nav-item nav-link" style="color: black; font-weight: lighter;">Login</a>
+                        <a href="{% url 'register' %}" class="btn  login-wf">Register</a>
+                    {% endif %}
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+
     
-  </div>
-   </section>
-  <!-- header    end        👎👎👎👎 -->
 
