--- a/wc/static/css/style.css
+++ b/wc/static/css/style.css
@@ -1,98 +1,54 @@
-     @import url('https://fonts.googleapis.com/css2?family=Rubik+Microbe&display=swap'); 
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
 *{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    
-  
-    
+  margin: 0;
+  padding: 0;
+  outline: none;
+
+  font-family: 'Montserrat', sans-serif;
+}
+body{
+  background: #f2f2f2;
+}
+ /* navigatio bar */
+ .nav-wf{
+  height: auto;
+  background: rgb(251, 194, 82) !important;
+  font-weight: bold !important;
+  z-index: 1;
 }
 
-/*  index hearder❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️  */
-.nav-me{
-    height: 80px;
-    background:#FBC252;
+
+.logo-wf {
+  height: 72px;
+  width: 185px;
 }
 
-.nav-me img {
-        width: 150px;
-        position: absolute;
-        top: 17px;
-        left: 12%;
+.login-wf{
+  background: black !important;
+  border-radius: 5px;
+  color: white !important;
+  border: none;
 
 }
-.nav-me .navmenu {
-    float: right;
-    margin-right: 25px;
-    
-}
-.nav-me .navmenu li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 15px;
-}
-.nav-me .navmenu li a{
-    position: relative;
-    color: black;
-    font-size: 18px;
-    padding: 5px 0;
-    text-transform: capitalize;
-    font-weight: bold;
-    text-decoration: none;
-}
-.nav-me .navmenu li a:before{
-    position: absolute;
-    content: '';
-    left: 0;
-    bottom: 0;
-    height: 3px;
-    width: 100%;
-    background: rgb(4, 4, 4);
-    transform: scaleX(0);
-    transform-origin: left;
-    transition:.3s linear;
-}
-.nav-me .navmenu li a:hover:before{
-    transform: scaleX(1);
-    transform-origin: left;
+
+.icon-wf{
+  background: black !important;
+  border: none !important;
 }
 
-.login{
-    background-color: black;
-    color: white;
-    font-family: sans-serif;
-    font-weight: bold;
-}
+/* finish silder */
 
-.login:hover{
-    color: rgb(17, 17, 17);
-    background-color: white;
-    
-}
-
-/* index finish header❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️r❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️ */
 
 
 
 /*  index sildera   🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️  */
 .carousel-inner img{
-        height: 660px;
+        height: 630px;
+        background: #0b0b0b;
 
     
 }
 
-.carousel-inner{
-
-    margin-top: 0px;
-}
-
-
-
-.sildermove{
-
-    background-color: #FBC252;
-}
 /* index  finish sildar  🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️🏙️*/
 
 
@@ -107,6 +63,9 @@
    
     padding:15px 9%;
     padding-bottom: 100px;
+
+   
+
 }
 
 .container .heading{
@@ -142,9 +101,11 @@
 }
 
 .container .box-container .box p{
-    color:#777;
+    color:rgb(0, 0, 0);
     font-size: 15px;
     line-height: 1.8;
+    text-align: left;
+    font-weight: bolder;
 }
 
 .container .box-container .box .btn{
@@ -177,7 +138,7 @@
     }
 }
 
-/* index silder 👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌   */
+/* index silder 👌👌👌👌👌👌  👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌   */
 
 .box{
     text-decoration: none;
@@ -191,11 +152,11 @@
 .services h1{
     display: inline-block;
     text-transform: uppercase;
-    border-bottom: 2px solid rgb(0, 0, 0);
+    border-bottom: 2px solid rgb(13, 13, 13);
     font-size: 20px;
     padding-bottom:10px ;
     margin-top: 40px;
-    
+    color: black;
 }
 .cen{
     max-width: 1200px;
@@ -418,6 +379,10 @@ ul{
 	background-color: #FBC252;
 }
 
+.footer-col .social-links{
+  width: 225px;
+}
+
 /*responsive*/
 @media(max-width: 767px){
   .footer-col{
@@ -440,7 +405,7 @@ ul{
 
 /* inde login page 📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞📞*/
    
-    
+
     .wrapper {
         max-width: 350px;
         min-height: 500px;
@@ -448,6 +413,7 @@ ul{
         padding: 40px 30px 30px 30px;
         background-color: #ecf0f3;
         border-radius: 15px;
+        
         box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
     }
     
@@ -457,8 +423,8 @@ ul{
     }
     
     .logo img {
-        width: 100%;
-        height: 80px;
+        width: 104%;
+        height: 94px;
         object-fit: cover;
         border-radius: 50%;
         box-shadow: 0px 0px 3px #5f5f5f,
@@ -472,7 +438,7 @@ ul{
         font-size: 1.4rem;
         letter-spacing: 1.3px;
         padding-left: 10px;
-        color: #555;
+        color: rgb(0, 0, 0);
     }
     
     .wrapper .form-field input {
@@ -483,6 +449,7 @@ ul{
         background: none;
         font-size: 1.2rem;
         color: #666;
+        height: 70px;
         padding: 10px 15px 10px 10px;
         /* border: 1px solid red; */
     }
@@ -528,7 +495,6 @@ ul{
         .wrapper {
             margin: 30px 20px;
             padding: 40px 15px 15px 15px;
-        }
     }
 
 
@@ -547,7 +513,7 @@ ul{
     border: 1px solid black;
     border-radius: 20px;
     font-weight: bold;
-    width: 100px;
+    width: 129px;
     padding: 7px;
     
 }
@@ -565,8 +531,8 @@ ul{
 /* index  vehical services page🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵🥵 */
 .row h3{
     text-align: center;
-    margin-top: 10px;
-    margin-bottom: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .our-team {
     
@@ -575,6 +541,7 @@ ul{
     text-align: center;
     overflow: hidden;
     position: relative;
+    height: 348px;
   }
   
   .our-team .picture {
@@ -680,54 +647,356 @@ ul{
 
 
 
-/* .checkbtn{
-    color: black;
-    float: right;
-    font-size: 25px;
-    cursor: pointer;
+
+.main-body {
+    padding: 15px;
+    
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(197, 14, 14, 0.125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
+}
+
+
+
+
+.aboutfile{
+  
+    text-align: center;
+}
+
+.contact{
+   background-color: #FBC252;
+   
+}
+.contact .info-box {
+    color: #444444;
+    background: #fafbff;
+    padding: 30px;
+  }
+  
+  .contact .info-box i {
+    font-size: 38px;
+    line-height: 0;
+    color: #4154f1;
+  }
+  
+  .contact .info-box img{
+    padding: 10px;
+    margin-left: 25px;
+  }
+  .contact .info-box h3 {
+    font-size: 20px;
+    color: #012970;
+    font-weight: 700;
+    margin: 20px 0 10px 0;
+  }
+  
+  .contact .info-box p {
+    padding: 0;
+    line-height: 24px;
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+  
+  .contact .php-email-form {
+    background: #fafbff;
+    padding: 30px;
+    height: 100%;
+  }
+  
+  .contact .php-email-form .error-message {
     display: none;
-}
-#check1 {
+    color: #fff;
+    background: #ed3c0d;
+    text-align: left;
+    padding: 15px;
+    margin-bottom: 24px;
+    font-weight: 600;
+  }
+  
+  .contact .php-email-form .sent-message {
     display: none;
-
-}
-@media screen and (max-width:990px) {
-    .nav-me{
-        padding: 0px 50px;
+    color: #fff;
+    background: #18d26e;
+    text-align: center;
+    padding: 15px;
+    margin-bottom: 24px;
+    font-weight: 600;
+  }
+  
+  .contact .php-email-form .loading {
+    display: none;
+    background: #fff;
+    text-align: center;
+    padding: 15px;
+    margin-bottom: 24px;
+  }
+  
+  .contact .php-email-form .loading:before {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    margin: 0 10px -6px 0;
+    border: 3px solid #18d26e;
+    border-top-color: #eee;
+    -webkit-animation: animate-loading 1s linear infinite;
+    animation: animate-loading 1s linear infinite;
+  }
+  
+  .contact .php-email-form input,
+  .contact .php-email-form textarea {
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 14px;
+    border-radius: 0;
+  }
+  
+  .contact .php-email-form input:focus,
+  .contact .php-email-form textarea:focus {
+    border-color: #4154f1;
+  }
+  
+  .contact .php-email-form input {
+    padding: 10px 15px;
+  }
+  
+  .contact .php-email-form textarea {
+    padding: 12px 15px;
+  }
+  
+  .contact .php-email-form button[type=submit] {
+    background: #4154f1;
+    border: 0;
+    padding: 10px 30px;
+    color: #fff;
+    transition: 0.4s;
+    border-radius: 4px;
+  }
+  
+  .contact .php-email-form button[type=submit]:hover {
+    background: #5969f3;
+  }
+  
+  @-webkit-keyframes animate-loading {
+    0% {
+      transform: rotate(0deg);
     }
-    .checkbtn{
-        display: block;
-
+  
+    100% {
+      transform: rotate(360deg);
     }
-    .nav-me ul{
-        width: 100%;
-        height: 100vh;
-        background-color: aqua;
-        position: fixed;
-        top: 75px;
-        left: 30px;
-        
-       
-
+  }
+  
+  @keyframes animate-loading {
+    0% {
+      transform: rotate(0deg);
     }
-    .nav-me  ul li{
-       border: 1px solid red;
-       display:block ;
-
-
+  
+    100% {
+      transform: rotate(360deg);
     }
-
-}
- */
-
+  }
+  
 
 
-
-
-
-
-
-
-
-
+  .container{
+   
+    padding:15px 9%;
+    padding-bottom:100px ;
+    padding-top:100px ;
+ }
  
+ .container .heading{
+    text-align: center;
+    padding-bottom: 15px;
+    text-shadow: 0 5px 10px rgba(0,0,0,.2);
+    font-size: 50px;
+ }
+ 
+ .container .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    gap:30px;   
+    
+ }
+ 
+ .container .box-container .box{
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    border-radius: 5px;
+    background: #fff;
+    text-align: center;
+    padding:30px 20px;
+ }
+ 
+ .container .box-container .box img{
+    height: 80px;
+ }
+ 
+ .container .box-container .box h3{
+    color:#444;
+    font-size: 22px;
+    padding:10px 0;
+ }
+ 
+ .container .box-container .box p{
+    color:#777;
+    font-size: 15px;
+    line-height: 1.8;
+ }
+ 
+ .container .box-container .box .btn{
+    margin-top: 10px;
+    display: inline-block;
+    background:#FBC252;
+    color:#fff;
+    font-size: 17px;
+    border-radius: 5px;
+    padding: 8px 25px;
+ }
+ 
+ .container .box-container .box .btn:hover{
+    background-color: black;
+    color: white;
+ }
+ 
+ .container .box-container .box .btn:hover{
+    letter-spacing: 1px;
+ }
+ 
+ .container .box-container .box:hover{
+    box-shadow: 0 10px 15px rgba(0,0,0,.3);
+    transform: scale(1.03);
+ }
+ 
+ @media (max-width:768px){
+    .container{
+        padding:20px;
+        font-size: 40px;
+    }
+    .container .heading{
+      font-size: 40px;
+    }
+ }
+ 
+ /* index silder 👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌👌   */
+ 
+ .box{
+    text-decoration: none;
+    height: 400px;
+ }
+ .services{
+    background: #FBC252;
+    text-align: center;
+   
+ }
+ 
+ .services h1{
+    display: inline-block;
+    text-transform: uppercase;
+    border-bottom: 2px solid rgb(0, 0, 0);
+    font-size: 20px;
+    padding-bottom:10px ;
+    margin-top: 40px;
+    
+ }
+ .cen{
+    max-width: 1200px;
+    margin: auto;
+    overflow: hidden;
+    padding: 20px;
+ }
+ .service{
+    display: inline-block;
+    width: calc(100%/3);
+    margin: 0 -2px;
+    padding: 20px;
+    box-sizing: border-box;
+    cursor: pointer;
+    transform: 0.4s;
+ }
+ 
+ 
+ 
+ .service:hover{
+    background-color:white;
+ }
+ 
+ .service i{
+    color: #FBC252;
+    font-size: 34px;
+    margin-bottom: 30px;
+ 
+ }
+ 
+ .service{
+    font-size: 18px;
+    text-transform: capitalize;
+    font-weight: 500;
+    margin: 0;
+ 
+ }
+ .service p{
+    color: #777;
+    font-size: 13px;
+    font-weight: 500;
+ 
+ }
+ 
+ @media screen and (max-width:900px) {
+    .service{
+        width: 50%;
+    }
+    
+ }
+ 
+ @media screen and (max-width:500px) {
+    .service{
+        width: 100%;
+    }
+    
+ }
+ 
+  
