--- a/templates/select.html
+++ b/templates/select.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <section>
-   <div class="container">
+   <div class="container" style="margin: auto;">
  
      <h1  class="heading" style="color: black;">REGISTRATION HERE!</h1>
  
@@ -20,7 +20,7 @@
              
          </div>
  
-         <div class="box" style="cursor: pointer;">
+         <div class="box" style="cursor: pointer; height : 350px;">
            <a href="{% url 'registerServiceman' %}" style= "text-decoration: none; color: black;">
              <img src="{% static 'img/serviceman.png' %}"  style= " height:225px; width:200px;"   alt="SERVICEMAN" >
            <h2 style="margin-top: 16px; ">FOR SERVICEMAN</h2>
