--- a/templates/accounts/servicemanDashboard.html
+++ b/templates/accounts/servicemanDashboard.html
@@ -6,6 +6,328 @@
 {% block content %}
 {% include 'includes/alerts.html' %}
 
-serviceman Dashboard
+<div class="container">
+  <div class="booking">
+    <div class="profile">
+      <div class="main-body">
+        
+
+ 
+        <div id="Appoiment" class="w3-container w3-border city" style="display:none">
+          <table id="non" class="table table-striped table-hover order">
+            <thead>
+              <tr>
+                <th>order. No</th>
+                <th>Service Man</th>
+                <th>service Man name</th>
+                <th>Order Date</th>
+                <th>Status</th>
+
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>10545464646</td>
+                <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar"> Rajnik</a></td>
+                <td>Madrid</td>
+                <td>Jun 15, 2017</td>
+                <td><span class="status text-success">&bull;</span> Delivered</td>
+              </tr>
+              <tr>
+                <td>20024545455</td>
+                <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar">Rajnik </a>
+                </td>
+                <td>Madrid</td>
+                <td>Jun 21, 2017</td>
+                <td><span class="status text-info">&bull;</span> Shipped</td>
+              </tr>
+              <tr>
+                <td>10545464646</td>
+                <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar"> Rajnik</a></td>
+                <td>Madrid</td>
+                <td>Jun 15, 2017</td>
+                <td><span class="status text-success">&bull;</span> Delivered</td>
+              </tr>
+              <tr>
+                <td>7841659227</td>
+                <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar">Rajnik </a>
+                </td>
+                <td>Madrid</td>
+                <td>Jun 21, 2017</td>
+                <td><span class="status text-info">&bull;</span> Shipped</td>
+              </tr>
+              <tr>
+                <td>10545464646</td>
+                <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar"> Rajnik</a></td>
+                <td>Madrid</td>
+                <td>Jun 15, 2017</td>
+                <td><span class="status text-success">&bull;</span> Delivered</td>
+              </tr>
+              <span id="dots">
+                <tr>
+                  <td>89635465876854</td>
+                  <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar">Rajnik </a>
+                  </td>
+                  <td>Madrid</td>
+                  <td>Jun 21, 2017</td>
+                  <td><span class="status text-info">&bull;</span> Shipped</td>
+                  <span id="dots"></span>
+                </tr>
+              </span>
+            </tbody>
+
+
+          </table>
+          <div class="more">
+
+            <span id="more3" style="display: none;">
+              <table id="non" class="table table-striped table-hover order">
+
+
+                </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>10545464646</td>
+                    <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar"> Rajnik</a>
+                    </td>
+                    <td>Madrid</td>
+                    <td>Jun 15, 2017</td>
+                    <td><span class="status text-success">&bull;</span> Delivered</td>
+                  </tr>
+                  <tr>
+                    <td>20024545455</td>
+                    <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar">Rajnik </a>
+                    </td>
+                    <td>Madrid</td>
+                    <td>Jun 21, 2017</td>
+                    <td><span class="status text-info">&bull;</span> Shipped</td>
+                  </tr>
+                  <tr>
+                    <td>10545464646</td>
+                    <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar"> Rajnik</a>
+                    </td>
+                    <td>Madrid</td>
+                    <td>Jun 15, 2017</td>
+                    <td><span class="status text-success">&bull;</span> Delivered</td>
+                  </tr>
+                  <tr>
+                    <td>7841659227</td>
+                    <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar">Rajnik </a>
+                    </td>
+                    <td>Madrid</td>
+                    <td>Jun 21, 2017</td>
+                    <td><span class="status text-info">&bull;</span> Shipped</td>
+                  </tr>
+                  <tr>
+                    <td>10545464646</td>
+                    <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar"> Rajnik</a>
+                    </td>
+                    <td>Madrid</td>
+                    <td>Jun 15, 2017</td>
+                    <td><span class="status text-success">&bull;</span> Delivered</td>
+                  </tr>
+                  <span id="dot3">
+                    <tr>
+                      <td>89635465876854</td>
+                      <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar">Rajnik
+                        </a> </td>
+                      <td>Madrid</td>
+                      <td>Jun 21, 2017</td>
+                      <td><span class="status text-info">&bull;</span> Shipped</td>
+                      <span id="dot3"></span>
+                    </tr>
+                  </span>
+                </tbody>
+
+
+              </table>
+            </span>
+            <button onclick="raj3()" id="readmore3">Show more..</button>
+
+
+            <script>
+              function raj3() {
+                var dots = document.getElementById("dot3");
+                var moreText = document.getElementById("more3");
+                var btnText = document.getElementById("readmore3");
+
+                if (dots.style.display === "none") {
+                  dots.style.display = "inline";
+                  btnText.innerHTML = "Read more";
+                  moreText.style.display = "none";
+                } else {
+                  dots.style.display = "none";
+                  btnText.innerHTML = "Show less <<";
+                  moreText.style.display = "inline";
+                }
+              }
+            </script>
+
+          </div>
+        </div>
+
+
+        <div id="Reward" class="w3-container w3-border city" style="display:none">
+          <div class="wallet-container text-center">
+            <p class="page-title"><i class="fa-solid fa-wallet"></i></i>My E-wallet</p>
+
+            <div class="amount-box text-center" style="background-color: red;">
+              <h2><i class="fa-solid fa-wallet"></i></h2>
+              <p>Total Point</p>
+              <p class="amount"> 123 </p>
+            </div>
+
+            <div class="btn-group text-center">
+            </div>
+
+            <div class="txn-history">
+              <p><b>History</b></p>
+
+
+
+              <p class="txn-list">Rajnik radadiya<span class="debit-amount">-$100</span> <span> 89/989/89</span> </p>
+
+              <p class="txn-list">Payment to abc shop<span class="debit-amount">-$150</span></p>
+
+              <p class="txn-list">Credit From abc ltd<span class="credit-amount">+$300</span></p>
+
+              <p class="txn-list">Transfer From John Doe<span class="credit-amount">+$100</span></p>
+            </div>
+          </div>
+
+        </div>
+
+
+
+        <div id="services" class="w3-container w3-border city" style="display:none">
+          services
+
+        </div>
+
+        <div id="Profile" class="w3-container w3-border city" style="display:none">
+          <div class="container">
+            <div class="main-body profile">
+
+              <br>
+              <div class="row gutters-sm">
+                <div class="col-md-4 mb-3">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="d-flex flex-column align-items-center text-center">
+                        {% if  vendor.user_profile.profile_picture %}
+                          <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Profile Pic" class="rounded-circle" width="150">
+                        {% else %}
+                          <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Profile Pic" class="rounded-circle" width="150">
+                        {% endif %}
+                        <div class="mt-3">
+                          <h4>John Doe</h4>
+                          <p class="text-secondary mb-1">Full Stack Developer</p>
+                          <p class="text-muted font-size-sm">Bay Area, San Francisco, CA</p>
+
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+                <div class="col-lg-8">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="row mb-3">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Full Name</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                          <input type="text" class="form-control" value="John Doe">
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Email</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                          <input type="text" class="form-control" value="john@example.com">
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Phone</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                          <input type="text" class="form-control" value="(239) 816-9029">
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Mobile</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                          <input type="text" class="form-control" value="(320) 380-4539">
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Address</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                          <input type="text" class="form-control" value="Bay Area, San Francisco, CA">
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col-sm-3">
+                          <h6 class="mb-0">Uplod picture</h6>
+                        </div>
+                        <div class="col-sm-9 text-secondary">
+                          <input type="file" class="form-control" value="Bay Area, San Francisco, CA">
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-sm-3"></div>
+                        <div class="col-sm-9 text-secondary">
+                          <input type="button" class="btn btn-primary px-4" value="Save Changes">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div id="Delete" class="w3-container w3-border city" style="display:none">
+          <h2>delete</h2>
+          <p>Tokyo is the capital of Japan.</p>
+        </div>
+        <div id="logout" class="w3-container w3-border city" style="display:none">
+          <h2>logout</h2>
+          <p>Tokyo is the capital of Japan.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+<!-- nav bar -->
+{% include 'includes/serviceman_nav.html' %}
+
+<script>
+  function openCity(evt, cityName) {
+    var i, x, tablinks;
+    x = document.getElementsByClassName("city");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablink");
+    for (i = 0; i < x.length; i++) {
+      tablinks[i].className = tablinks[i].className.replace(" w3-red", "");
+    }
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " w3-red";
+  }
+</script>
 
 {% endblock %}
