--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,7 +1,8 @@
 {%load static%}
+
 <section>
     <footer class="footer">
-        <div class="container">
+        <div class="container" style="margin-left: auto;">
           <div class="row">
             <div class="footer-col">
               <h4>company</h4>
@@ -44,7 +45,6 @@
         </div>
      </footer>
  </section>
-
  <script src="{% static 'js/js.js'%}"></script>
 </body>
 </html>
