--- a/wc/static/css/custome.css
+++ b/wc/static/css/custome.css
@@ -67,3 +67,150 @@
     width: 225px !important;
 }
 
+/* .booking .profile{
+    width: 800px !important;
+} */
+
+/* .city .s-table{
+    text-align: center;
+    width: 900px;
+} */
+
+/* .s-tr{
+    background-color: #ffffff;
+}
+
+.main-body{
+    padding-left: auto;
+    padding-right: auto;
+  }
+
+ .s-td{
+    text-align: center;
+ } */
+
+ .s-head{
+    background-color: #FBC252;
+    width: 900px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 4px ;
+    border-bottom-left-radius : 0px;
+    border-bottom-right-radius : 0px;
+    margin-bottom: 0px;
+
+ }
+
+ hr{
+    margin: 0;
+ }
+
+.s-h3{
+    background-color: #fcfcfc;
+    width: 900px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 4px ;
+    border-bottom-left-radius : 0px;
+    border-bottom-right-radius : 0px;
+    margin-bottom: 0px;
+} 
+
+.s-row{
+    background-color: #fff;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+
+.btn-color{
+    color: #000000;
+    background-color: #FBC252;
+}
+.btn-color:hover{
+    color: #FBC252;
+    background-color: #000000;
+}
+
+.s-border{
+    border-bottom-left-radius : 4px;
+    border-bottom-right-radius : 4px;
+}
+
+.our-team {
+    margin-bottom: 30px;
+    background-color: white;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+    height: 348px;
+    width: 230px;
+}
+
+.check-btn{
+    background-color: #FBC252;
+    color: #000;
+}
+.check-btn:hover{
+    background-color: #000;
+    color: #FBC252;
+}
+
+.p-con{
+    margin: auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 1200px;
+}
+.page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+    background-color: #FBC252;
+    border-color: #FBC252;
+}
+.page-item.active .page-link:hover {
+    z-index: 3;
+    color: hwb(0 100% 0%);
+    background-color: #FBC252;
+    border-color: #FBC252;
+}
+
+
+.pagination {
+    float: left;
+}
+
+.od{
+    margin : auto;
+    margin-top: 60px;
+    background-color: #fff;
+    padding: 50px;
+}
+
+.od-col-p{
+    position: relative;
+}
+.box--6 {
+    left: 955px;
+    top: -14px;
+    position: absolute;
+    width: 165px;
+    height: 180px;
+    background: #FFF;
+    background-clip: padding-box;
+    
+}
+.r-card{
+    height: 320px;
+    width: 210px;
+}
+
+#rate-1,#rate-2,#rate-3,#rate-4,#rate-5{
+    display: none;
+
+}
+.star-e{
+    font-size: 30px;
+}
