--- a/templates/serviceman/s_booking.html
+++ b/templates/serviceman/s_booking.html
@@ -5,191 +5,76 @@
 
 {% block content %}
 {% include 'includes/alerts.html' %}
-<div class="container">
+
+<div class="container" style="margin-bottom :180px">
     <div class="booking">
         <div class="profile">
-            <div class="main-body">
+            <div class="main-body p-0">
 
                 <div id="Booking" class="w3-container w3-border city">
-                    <table id="non" class="table table-striped table-hover order" style="border-radius: 5px !important;">
+                    <table id="non" class="table table-striped table-hover order text-center">
                         <thead>
-                            <tr style="background-color: #FBC252;">
-                                <th>order. No</th>
-                                <th>Visitor name</th>
-                                <th>service types</th>
-                                <th>Order Date</th>
-                                <th>Address </th>
+                            <tr style="background-color: #fbc252;">
+                                <th>Order No</th>
+                                <th>Service</th>
+                                <th>Customer</th>
+                                <th>Appointment Date</th>
                                 <th>Status</th>
-
                             </tr>
                         </thead>
+                        {% if orders %}
+                        <tbody>
+                            {% for order in orders %}
+                            <tr>
+
+                                <td><a style="text-decoration: none !important; color: black;"
+                                        href="{% url 's_pending_booking' order.pk %}">{{order}}</a></td>
+                                <td><img src="{{order.img.service_img.url}}" class="avatar" width="150px"
+                                        alt="{{order.service}}"></td>
+                                <td>{{order.first_name}} {{order.last_name}}</td>
+                                <td>{{order.date |date:"d M Y" }}</td>
+                                <td><span class="status text-warning"
+                                        style="font-size: 60px; margin-bottom: 15px;">&bull;</span>Pending</td>
+
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                        {% else %}
                         <tbody>
                             <tr>
-                                <td>10545464646</td>
-                                <td><a href="#"><img src="{% static '/img/driver.png' %}" class="avatar" width="150px" alt="Avatar"> Rajnik</a></td>
-                                <td>Madrid</td>
-                                <td>Jun 15, 2017</td>
-                                <td><span class="status text-success">&bull;</span> Delivered</td>
-                                <td>Jun 15, 2017</td>
-                            </tr>
-
-                            <tr>
-                                <td>20024545455</td>
-                                <td><a href="#"><img src="{% static '/img/driver.png' %}" class="avatar" width="150px"
-                                            alt="Avatar">Rajnik </a>
+                                <td colspan="5" class="text-center">
+                                    <h4>There are no one pending order.</h4>
                                 </td>
-                                <td>Madrid</td>
-                                <td>Jun 21, 2017</td>
-                                <td><span class="status text-info">&bull;</span> Shipped</td>
-                                <td>Jun 15, 2017</td>
                             </tr>
-
-                            <tr>
-                                <td>10545464646</td>
-                                <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar">
-                                        Rajnik</a></td>
-                                <td>Madrid</td>
-                                <td>Jun 15, 2017</td>
-                                <td><span class="status text-success">&bull;</span> Delivered</td>
-                                <td>Jun 15, 2017</td>
-                            </tr>
-
-                            <tr>
-                                <td>7841659227</td>
-                                <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px"
-                                            alt="Avatar">Rajnik </a>
-                                </td>
-                                <td>Madrid</td>
-                                <td>Jun 21, 2017</td>
-                                <td><span class="status text-info">&bull;</span> Shipped</td>
-                            </tr>
-
-                            <tr>
-                                <td>10545464646</td>
-                                <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px" alt="Avatar">
-                                        Rajnik</a></td>
-                                <td>Madrid</td>
-                                <td>Jun 15, 2017</td>
-                                <td><span class="status text-success">&bull;</span> Delivered</td>
-                            </tr>
-
-                            <span id="dots">
-                                <tr>
-                                    <td>89635465876854</td>
-                                    <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px"
-                                                alt="Avatar">Rajnik </a>
-                                    </td>
-                                    <td>Madrid</td>
-                                    <td>Jun 21, 2017</td>
-                                    <td><span class="status text-info">&bull;</span> Shipped</td>
-                                    <span id="dots"></span>
-                                </tr>
-                            </span>
                         </tbody>
-
-
+                        {% endif %}
                     </table>
-                    <div class="more" style="margin-top: 0px;">
-
-                        <span id="more2" style="display: none;">
-                            <table id="" class="table table-striped table-hover order">
-
-
-                                </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>10545464646</td>
-                                        <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px"
-                                                    alt="Avatar"> Rajnik</a>
-                                        </td>
-                                        <td>Madrid</td>
-                                        <td>Jun 15, 2017</td>
-                                        <td><span class="status text-success">&bull;</span> Delivered</td>
-                                        <td>Jun 15, 2017</td>
-                                    </tr>
-                                    <tr>
-                                        <td>20024545455</td>
-                                        <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px"
-                                                    alt="Avatar">Rajnik </a>
-                                        </td>
-                                        <td>Madrid</td>
-                                        <td>Jun 21, 2017</td>
-                                        <td><span class="status text-info">&bull;</span> Shipped</td>
-                                        <td>Jun 15, 2017</td>
-                                    </tr>
-                                    <tr>
-                                        <td>10545464646</td>
-                                        <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px"
-                                                    alt="Avatar"> Rajnik</a>
-                                        </td>
-                                        <td>Madrid</td>
-                                        <td>Jun 15, 2017</td>
-                                        <td><span class="status text-success">&bull;</span> Delivered</td>
-                                    </tr>
-                                    <tr>
-                                        <td>7841659227</td>
-                                        <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px"
-                                                    alt="Avatar">Rajnik </a>
-                                        </td>
-                                        <td>Madrid</td>
-                                        <td>Jun 21, 2017</td>
-                                        <td><span class="status text-info">&bull;</span> Shipped</td>
-                                    </tr>
-                                    <tr>
-                                        <td>10545464646</td>
-                                        <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px"
-                                                    alt="Avatar"> Rajnik</a>
-                                        </td>
-                                        <td>Madrid</td>
-                                        <td>Jun 15, 2017</td>
-                                        <td><span class="status text-success">&bull;</span> Delivered</td>
-                                    </tr>
-                                    <span id="dot2">
-                                        <tr>
-                                            <td>89635465876854</td>
-                                            <td><a href="#"><img src="./img/driver.png" class="avatar" width="150px"
-                                                        alt="Avatar">Rajnik
-                                                </a> </td>
-                                            <td>Madrid</td>
-                                            <td>Jun 21, 2017</td>
-                                            <td><span class="status text-info">&bull;</span> Shipped</td>
-                                            <span id="dot2"></span>
-                                        </tr>
-                                    </span>
-                                </tbody>
-
-
-                            </table>
-                        </span>
-                        <button onclick="raj()" id="readmore2">Show more..</button>
-
-
-                    </div>
-
-                    <script>
-                        function raj() {
-                            var dots = document.getElementById("dot2");
-                            var moreText = document.getElementById("more2");
-                            var btnText = document.getElementById("readmore2");
-
-                            if (dots.style.display === "none") {
-                                dots.style.display = "inline";
-                                btnText.innerHTML = "Read more";
-                                moreText.style.display = "none";
-                            } else {
-                                dots.style.display = "none";
-                                btnText.innerHTML = "Show less <<";
-                                moreText.style.display = "inline";
-                            }
-                        }
-                    </script>
+                    {% if nav == True %}
+                    <nav aria-label="...">
+                        <ul class="pagination">
+                            {% if orders.has_previous %}
+                            <li class="page-item ">
+                                <a class="page-link" href="?page={{ orders.previous_page_number }}">Previous</a>
+                            </li>
+                            {% endif %}
+                            
+                            <li class="page-item active">
+                                <a class="page-link" href="">Page {{ orders.number }} of {{ orders.paginator.num_pages }}<span class="sr-only"></span></a>
+                            </li>
+                           
+                            {% if orders.has_next %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ orders.next_page_number }}">Next</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </nav>
+                    {% endif %}
                 </div>
 
             </div>
         </div>
     </div>
-
 <!-- nav bar -->
 {% include 'includes/serviceman_nav.html' %}
 </div>
